--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,5 +1,5 @@
 #Welcome to the inventory-management-system wiki!.
-
+#summary One-sentence summary of this page.
 Welcome to the inventory-management-system wiki!
 
 Inventory Management System was developed for anyone who needs a simple and easy way to keep track of their inventory.
