--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#Welcome to the inventory-management-system wiki!.
 
 Welcome to the inventory-management-system wiki!
 
