--- a/wiki/ContactPage.wiki
+++ b/wiki/ContactPage.wiki
@@ -7,7 +7,7 @@ Our group contains three members:
 
 Mr. Yogarajah  Kesavan               2009/SP/014
 
-Mr.Maheswaran  Nitharas		     2009/SP/042
+Mr.Maheswaran  Nitharsan		     2009/SP/042
 
 Miss. Jeyapratheepa Jeyanantharajah  2009/CSC/009
 
