--- a/wiki/ContactPage.wiki
+++ b/wiki/ContactPage.wiki
@@ -6,12 +6,12 @@
 
 The project entitled Inventory Management System is submitted  fulfillment of Course unit CSC301GC2 in Computer Science for the Degree of Bachelor of Science, 2011 at the University of Jaffna by group-4.
 
-Our project advisor : 
+* Our project advisor : *
 
 Mr. K. Sarveswaran ( iamsarves@gmail.com ) 
 
 	
-Our group contains three members :
+* Our group contains three members : *
 
 Mr. Yogarajah  Kesavan ( ykesan@gmail.com ) 				2009/SP/014
 
@@ -20,8 +20,8 @@ Mr.Maheswaran  Nitharsan ( mnitharsan@yahoo.com ) 			2009/SP/042
 Miss. Jeyapratheepa Jeyanantharajah ( jeya_mathu@yahoo.com ) 	2009/CSC/009
 
 
-Blog :   https://www.inventorymanagementsystemims.blogspot.com
+* Blog : *   https://www.inventorymanagementsystemims.blogspot.com
 
-Email : inventorymsystem@gmail.com
+* Email : * inventorymsystem@gmail.com
 
-Google code : https://code.google.com/p/inventory-management-system-ims/
+* Google code : * https://code.google.com/p/inventory-management-system-ims/
