--- a/wiki/DeveloperPage.wiki
+++ b/wiki/DeveloperPage.wiki
@@ -1,33 +1,41 @@
-= Developer page =
+= *_Developer page_* =
+
+
+= Technologies =
 
 
 This project has been designed by using the CSS templates. This is help to design our interfaces and also help Adobe Dreamweaver CS5.5 and HTML 5.  PHP have been used to develop the coding in our system. SQL server is used to create database as the back end for this system.
 
 
-*Tables*
+
+= Tables =
 
 Our database contain eleven tables for our system.
 
-Users:
+* Users : *
 
-This table consist some attributes such as user id, first name, last name, email, username, password and user level. These details help to create an account and login the system.
+This table consists of  some attributes such as user id, first name, last name, email, username, password and user level. These details help to create an account and login the system.
 
-Lab equipments (le), Office equipments (oe), Furniture (fu):
+* Lab equipments (le), Office equipments (oe), Furniture (fu) : *
 
-This table consist some attributes such as Articles, Identification number, folio number, name of supplier, date, unit price, officer in charge and remarks. le table helps to lab equipments details, . oe table helps to office equipments details and . fu table helps to furniture details.
+This table consists of  some attributes such as Articles, Identification number, folio number, name of supplier, date, unit price, officer in charge and remarks. le table helps to lab equipments details, . oe table helps to office equipments details and . fu table helps to furniture details.
 
-Consumable (cons), Stationary (sta), Maintenance (mai):
+* Consumable (cons), Stationary (sta), Maintenance (mai) : *
 
-This table consist some attributes such as id, item, number, action, date and balance. Cons table helps to consumable details, sta table helps to stationary details and mai table helps to maintenance details.
+This table consists of  some attributes such as id, item, number, action, date and balance. Cons table helps to consumable details, sta table helps to stationary details and mai table helps to maintenance details.
 
-Loan issue:
+* Loan issue : *
 
-This table consist some attributes such as loan id, article, id, issued date, issued by, received by, received department, status, return date and remarks. This table helps to add, edit and show the issued items.
+This table consists of  some attributes such as loan id, article, id, issued date, issued by, received by, received department, status, return date and remarks. This table helps to add, edit and show the issued items.
 
-Loan taken:
+* Loan taken : *
 
-This table consist some attributes such as loan id, article, id, issued department, received date, received by, status, return date and remarks. This table helps to add, edit and show the taken items.
+This table consists of  some attributes such as loan id, article, id, issued department, received date, received by, status, return date and remarks. This table helps to add, edit and show the taken items.
 
-Remove:
+* Remove : *
 
-This table consist some attributes such as id number, article, reason, date and authorized by. These details help to remove, view and show the individual articles.
+This table consists of  some attributes such as id number, article, reason, date and authorized by. These details help to remove, view and show the individual articles.
+
+* Current Status : *
+
+This table consists of some attributes such as id number, status( in, issued, removed ) and location. These details help to track the current status and location of the equipments. 
